--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+moc*.go
+moc*.h
+moc*.cpp
+
+rcc.cpp
+rcc*.go
